acrescentando logo acima do rodapé

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,13 +35,14 @@
                 </div>
             </div>
         </nav>
+        
     </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
+    <img src="https://d2lljesbicak00.cloudfront.net/merida-v2/x50//brand/merida-logo.svg?p3" class="img-fluid" alt="...">
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - aula-20/04 Bikes- <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
