ajustando imgagem home, e add butões em contato

--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -20,18 +20,36 @@
         <td>Mark</td>
         <td>mark@@merida.com</td>
         <td>+555 75 99999-99999</td>
+        <td>
+            <button type="button" class="btn btn-primary">Editar</button>
+        </td>
+        <td>
+            <button type="button" class="btn btn-primary">Excluir</button>
+        </td>
         </tr>
         <tr>
         <th scope="row">2</th>
         <td>Jacob</td>
         <td>jacob@@merida.com</td>
         <td>+555 71 99999-99999</td>
+        <td>
+            <button type="button" class="btn btn-primary">Editar</button>
+        </td>
+        <td>
+            <button type="button" class="btn btn-primary">Excluir</button>
+        </td>
         </tr>
         <tr>
         <th scope="row">3</th>
         <td>Larry</td>
         <td>larry@@merida.com</td>
         <td>+555 71 99999-99999</td>
+        <td>
+            <button type="button" class="btn btn-primary">Editar</button>
+        </td>
+        <td>
+            <button type="button" class="btn btn-primary">Excluir</button>
+        </td>
         </tr>
     </tbody>
     </table>
