--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem Vindo fans das Bikes</h1>
-    <img src="https://d2lljesbicak00.cloudfront.net/merida-v2/crud-zoom-img//master/bikes/2022/SCULTURA_10K_camblk_MY2022.tif?p3" alt="imagemFundoMerida" class="img-fluid">
+    <div class="container">
+        <img src="https://d2lljesbicak00.cloudfront.net/merida-v2/crud-zoom-img//master/bikes/2022/SCULTURA_10K_camblk_MY2022.tif?p3" width="800px" alt="imagemFundoMerida" class="img-fluid">
+    </div>
     @* Aluno Guilherme Araújo *@
 </div>
