--- a/Views/QuemSomos/Index.cshtml
+++ b/Views/QuemSomos/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Quem Somos </h1>
     <div class="row g-0 text-center">
   <div class="col-sm-6 col-md-8">
-    <img src="https://www.bikemarket.pt/storage/posts//1644327435_1.jpg"class="img-fluid" alt="equipeNoPalco">
+    <img src="https://www.bikemarket.pt/storage/posts//1644327435_1.jpg" class="img-fluid" alt="FotoPorDoSol">
   </div>
   <div class="col-6 col-md-4">Somos fans da Equipe <strong>Bahrain Victorious</strong> e das increveis bikes <strong>Merida</strong>.
     <p>Como Diz o próprio nome da Equipe "Victorius", é uma equipe vitoriosa. Com diversas vitórias nas principais corridas mundiais contando no seu currículo.</p>
