--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -4,7 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Contato</h1>
-    
+    <div >
+        <button type="button" class="btn btn-success d-block">Adicionar</button>
+    </div>
     <table class="table">
     <thead>
         <tr>
@@ -22,9 +24,7 @@
         <td>+555 75 99999-99999</td>
         <td>
             <button type="button" class="btn btn-primary">Editar</button>
-        </td>
-        <td>
-            <button type="button" class="btn btn-primary">Excluir</button>
+            <button type="button" class="btn btn-danger">Excluir</button>
         </td>
         </tr>
         <tr>
@@ -34,9 +34,7 @@
         <td>+555 71 99999-99999</td>
         <td>
             <button type="button" class="btn btn-primary">Editar</button>
-        </td>
-        <td>
-            <button type="button" class="btn btn-primary">Excluir</button>
+            <button type="button" class="btn btn-danger">Excluir</button>
         </td>
         </tr>
         <tr>
@@ -46,9 +44,7 @@
         <td>+555 71 99999-99999</td>
         <td>
             <button type="button" class="btn btn-primary">Editar</button>
-        </td>
-        <td>
-            <button type="button" class="btn btn-primary">Excluir</button>
+            <button type="button" class="btn btn-danger">Excluir</button>
         </td>
         </tr>
     </tbody>
