Ajuste do tamanho das imagens do carroussel

--- a/Views/Imagens/Index.cshtml
+++ b/Views/Imagens/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Imagens";
 }
+<head>
+    <link rel="stylesheet" href="~/css/imagens.css">
+</head>
 
     <div class="text-center">
             <h1 class="display-4">Imagens</h1>
             <div class="container">
                 <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-                <div class="carousel-item active" style="width: ;">
+                <div class="carousel-item active" >
                 <img src="https://bahraincyclingteam.com/wp-content/uploads/2023/01/CL_ALTEA22_1012_trainingride-21-scaled.jpg" class=" d-block w-100" alt="Bahrain">
                 </div>
                 <div class="carousel-item">
