organizando o footer no Layout, e iniciando uma brincadeira com o horáriopara mudar o h1 da home e o background

--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">Contato</h1>
     <div >
-        <button type="button" class="btn btn-success d-block">Adicionar</button>
+        <button asp-action="Adicionar" type="button" class="btn btn-success d-block">Adicionar</button>
     </div>
     <table class="table">
     <thead>
