--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="h-100">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/aula20._04.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="d-flex flex-column h-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -43,7 +43,8 @@
         </main>
     </div>
     <img src="https://d2lljesbicak00.cloudfront.net/merida-v2/x50//brand/merida-logo.svg?p3" class="img-fluid" alt="...">
-    <footer class="border-top footer text-muted">
+    <span class="flex-grow-1"></span>
+    <footer class="border-top footer text-muted p-3 " style="background-color: black;">
         <div class="container">
             &copy; 2023 - aula-20/04 Bikes- <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </div>
