--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    int hora = @DateTime.Now.Hour;
 }
+<body style="background-color: rgb(73, 72, 72); color: white;">
+    <div class="text-center">
 
-<div class="text-center">
-    <h1 class="display-4">Bem Vindo fans das Bikes</h1>
-    <div class="container">
-        <img src="https://d2lljesbicak00.cloudfront.net/merida-v2/crud-zoom-img//master/bikes/2022/SCULTURA_10K_camblk_MY2022.tif?p3" width="800px" alt="imagemFundoMerida" class="img-fluid">
+        @if (hora < 12)
+        {
+                            <h1 class="display-4"> Bom dia fans das Bikes</h1>
+        }
+        else if (hora >= 12 && hora <= 18)
+        {
+                            <h1 class="display-4" > Boa tarde fans das Bikes</h1>
+        }
+        else
+        {
+                            <h1 class="display-4"> Boa noite fans das Bikes</h1>
+        }
+
+        <div class="container">
+            <image src="https://d2lljesbicak00.cloudfront.net/merida-v2/crud-zoom-img//master/bikes/2022/SCULTURA_10K_camblk_MY2022.tif?p3" width="800px" alt="Imagem Merida" class="img-fluid">
+        </div>
+        @* Aluno Guilherme Araújo *@
     </div>
-    @* Aluno Guilherme Araújo *@
-</div>
+</body>
